# Real-Output

./: .gitignore  CMakeLists.txt  RealUtil.cpp  RealUtil.h  e.cpp  main.cpp  test_e.cpp
dataset/: sqrt_minus.csv
functions/: error_sqrt_minus.cpp  sqrt_minus  sqrt_minus.cpp
functions/double/: sqrt_minus.cpp
functions/iRRAM/: sqrt_minus.cc
x/functions/double/: sqrt_minus.cpp
x/functions/error/: error_exp1.cpp  error_exp2.cpp  error_exp3.cpp  error_pow_add.cpp  error_sin_minus1.cpp  error_sin_minus2.cpp  error_sin_minus3.cpp  error_sqrt_minus1.cpp  error_sqrt_minus2.cpp  error_sqrt_minus3.cpp
x/functions/iRRAM/: sqrt_minus_pro.cc
